<resources>
    <string name="app_name">Дом под защитой</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_management">Управление</string>
    <string name="title_compensation">Возмещение</string>
    <string name="title_payments">Платежи</string>
    <string name="title_profile">Профиль</string>
    <string name="title_design_theme">Тема оформления</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_management_fragment">Управление полисами</string>
    <string name="title_compensation_fragment">Возмещение ущерба</string>
    <string name="title_payments_fragment">Платежи</string>
    <string name="empty_state_image_desc_home">плэйсхолдер для главной страницы</string>
    <string name="empty_state_image_desc_compensation">плэйсхолдер для страницы возмещения</string>
    <string name="out_of_profile">Выйти из учетной записи</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="about_app">О приложении</string>
    <string name="design_theme">Тема оформления</string>
    <string name="refund_requests">Заявки на возмещение</string>
    <string name="notification">Уведомления</string>
    <string name="email">Электронная почта</string>
    <string name="num_phone">Номер телефона</string>
    <string name="fio">Фамилия Имя Отчество</string>
    <string name="date_birth">Дата рождения</string>
    <string name="accaunt_not_confirm">учетная запись не подтверждена</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="add_pasport">Данные документа удостоверяющего личность</string>
    <string name="passport">Паспорт</string>
    <string name="add_data">Введите данные</string>
    <string name="accaunt_confirmed">Учётная запись подтверждена</string>
    <string name="oform_strah">Оформить страховой случай</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_to_register"><u>Нет аккаунта? Зарегистрируйтесь!</u></string>
    <string name="text_to_login"><u>Уже есть аккаунт? Авторизуйтесь!</u></string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>