<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_management"
        android:icon="@drawable/category"
        android:title="@string/title_management" />

    <item
        android:id="@+id/navigation_compensation"
        android:icon="@drawable/compensation"
        android:title="@string/title_compensation" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/payments"
        android:title="@string/title_payments" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>