<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:gravity="left|center_vertical"
            android:text="@string/title_profile"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatarImage"
                    style="@style/CircularAvatarStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_incognito" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="12"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileFio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="ИВАНОВ ИВАН ИВАНОВИЧ"
                        android:textColor="@color/text_color_all"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/unchecked_profile" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_weight="15"
                            android:gravity="center_vertical"
                            android:text="@string/accaunt_not_confirm"
                            android:textColor="@color/text_color_all"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/notification_card"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_notification"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/notification_icon" />


                <TextView
                    android:id="@+id/text_notification"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight="150"
                    android:gravity="center_vertical"
                    android:text="@string/notification"
                    android:textColor="@color/text_color_all"
                    android:textSize="14sp"
                    android:textStyle="normal" />


                <ImageView
                    android:id="@+id/imageView_1"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/refund_requests_card"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_zayavki_na_vozmechenie"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/zayavki_na_vozmechenie" />

                <TextView
                    android:id="@+id/text_zayavki_na_vozmechenie"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight="150"
                    android:gravity="center_vertical"
                    android:text="@string/refund_requests"
                    android:textColor="@color/text_color_all"
                    android:textSize="14sp"
                    android:textStyle="normal" />


                <ImageView
                    android:id="@+id/imageView_2"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/design_theme_card"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_tema_oformleniya"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tema_oformleniya" />

                <TextView
                    android:id="@+id/text_tema_oformleniya"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight="150"
                    android:gravity="center_vertical"
                    android:text="@string/design_theme"
                    android:textColor="@color/text_color_all"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imageView_3"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/about_app_card"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_color"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_about_app"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_weight="26"
                    android:gravity="center_vertical"
                    android:text="@string/about_app"
                    android:textColor="@color/text_color_all"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imageView_4"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow_right" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/button_exit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/out_of_profile"
            android:textColor="@color/button_double_login_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button_delete_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/delete_profile"
            android:textColor="@color/button_exit"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>