<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_details.ProfileDetailsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatarImage"
            style="@style/CircularAvatarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_incognito" />

        <TextView
            android:id="@+id/btn_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="Изменить фото"
            android:textColor="@color/button_double_login_text"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/card_color"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/email"
                    android:textColor="@color/text_color_description" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_background_selector"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="Введите Email example@examp.ru"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:text=""
                    android:textColor="@color/text_color_all" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/card_color"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/num_phone"
                        android:textColor="@color/text_color_description" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edittext_background_selector"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="Введите номер телефона +7(XXX)XXX-XX-XX"
                        android:inputType="phone"
                        android:padding="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="2dp"
                        android:text=""
                        android:textColor="@color/text_color_all" />
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Фамилия -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/card_color"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="Фамилия"
                    android:textColor="@color/text_color_description" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_background_selector"
                    android:enabled="false"
                    android:hint="Введите фамилию"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_color_all"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Имя -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/card_color"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Имя"
                    android:textColor="@color/text_color_description"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"/>

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_background_selector"
                    android:enabled="false"
                    android:hint="Введите имя"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_color_all"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Отчество -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/card_color"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Отчество"
                    android:textColor="@color/text_color_description"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"/>

                <EditText
                    android:id="@+id/editTextPatronymic"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edittext_background_selector"
                    android:enabled="false"
                    android:hint="Введите отчество"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_color_all"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@color/card_color">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/date_birth"
                        android:textColor="@color/text_color_description" />

                    <EditText
                        android:id="@+id/editTextDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edittext_background_selector"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="Введите дату рождения XX/XX/XXXX"
                        android:inputType="date"
                        android:padding="5dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="5dp"
                        android:text=""
                        android:textColor="@color/text_color_all" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                app:cornerRadius="5dp"
                android:text="@string/save"/>

            <Button
                android:id="@+id/button_edit"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                app:cornerRadius="5dp"
                android:text="@string/edit"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>